// `Removed` for deprecated features removed in this release.
// `Fixed` for any bug fixes.
// `Security` to invite users to upgrade in case of vulnerabilities.

[[v3.1.0]]
v3.1.0 (unreleased)
-------------------

Removed
~~~~~~~

- The darkmode settings `grayscale.all`, `grayscale.images` and
  `increase_text_contrast` got removed, following removals in Chromium.

Changed
~~~~~~~

- (TODO) Upgraded the bundled Qt version to 6.6.1, based on Chromium 112. Note
  this is only relevant for the macOS/Windows releases, on Linux those will be
  upgraded via your distribution packages.
- The `colors.webpage.darkmode.threshold.text` setting got renamed to
  `colors.webpage.darkmode.threshold.foreground`, following a rename in
  Chromium.

Fixed
~~~~~

- Compatibility with PDF.js v4
- Added an elaborate workaround for a bug in QtWebEngine 6.6.0 causing crashes
  on Google Mail/Meet/Chat.
- Graphical glitches in Google sheets and PDF.js, again. Removed the version
  restriction for the default application of
  `qt.workarounds.disable_accelerated_2d_canvas` as the issue was still
  evident on Qt 6.6.0. (#7489)
- The `colors.webpage.darkmode.threshold.foreground` setting (`.text` in older
  versions) now works correctly with Qt 6.4+.


[[v3.0.2]]
v3.0.2 (2023-10-19)
-------------------

Fixed
~~~~~

- Upgraded the bundled Qt version to 6.5.3. Note this is only relevant for the
  macOS/Windows releases, on Linux those will be upgraded via your distribution
  packages. This Qt patch release comes with
  https://code.qt.io/cgit/qt/qtreleasenotes.git/tree/qt/6.5.3/release-note.md[various important fixes],
  among them:
    * Fix for crashes on Google Meet / GMail with dark mode enabled
    * Fix for right-click in devtools not working properly
    * Fix for drag & drop not working on Wayland
    * Fix for some XKB key remappings not working
    * Security fixes up to Chromium 116.0.5845.187, including